--- a/css/typography.css
+++ b/css/typography.css
@@ -32,6 +32,10 @@ body{
     font-weight: 500;
 }
 
+.dropdown-buttons{
+    font-weight: 500;
+}
+
 .dropdown-menu-li{
     font-size: var(--step-0);
 }
